syntax = "proto3";

option csharp_namespace = "Hosting.Grpc.Common";

package Grpc.Common;


message ErrorResult{
	int32 Code=1;
	string Message=2;
}

