syntax = "proto3";
import "ErrorResult.proto";

option csharp_namespace = "UserCenter.GrpcServices";

package UserGrpc;

service UserAuthenticationGrpcService{
	rpc Login(LoginRequest) returns (UserAuthenticationResponse);
	rpc Validation(ValidationUserRequest) returns (UserAuthenticationResponse);
}

message LoginRequest{
	string Username=1;
	string Passwrod=2;
}

message UserInfo{
	string UserId=1;
	string Username=2;
}

message UserAuthenticationResponse{
	oneof result{
		Grpc.Common.ErrorResult Error = 1;
		UserInfo Result = 2;
	}
}

message ValidationUserRequest{
	string UserId=1;
}
